# mkx

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  lint.yml
mkx/: cli.py  ddos.py  exploit.py  mac_server_discover.py  snmp.py
mkx/attacks/: ddos.py  exploit.py  kill_web_server.py
mkx/core/: helps.py  network.py  settings.py
mkx/discovery/: mac_server_discover.py  snmp.py  upnp.py  upnp_long.py
scripts/: nmap-snmp-scan.sh
