[project]
name = "mkx"
version = "0.2.3"
description = "CLI for exploring IoT and network devices"
authors = [
    {name = "Henrique Sebastião", email = "contato@henriquesebastiao.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet"
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pysnmp>=7.1.27",
    "typer>=0.26.7",
    "upnpy>=1.1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "taskipy>=1.14.1",
]

[project.scripts]
mkx = "mkx.cli:app"

[tool.uv]
upgrade = true
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"*.py" = ["F403", "E722", "PLW3201", "PLW0603", "PLW0602"]
"snmp.py" = ["PLR2004", "PLR0912", "PLR0915"]
"ddos.py" = ["PLR0913", "PLR0917"]
"helps.py" = ["E501"]
"kill_web_server.py" = ["E501"]
"network.py" = ["PLR2004"]
"upnp.py" = ["PLR2004", "E501", "PLR1702", "PLR0915", "PLR0912"]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'